# libronda

./: Cargo.toml  LICENSE
src/: lib.rs  repodata.rs  version_old.rs
src/version/: README  comp_op.rs  mod.rs  version.rs  version_compare.rs  version_part.rs
src/version/custom_parts/: pep440.rs
src/version/parsers/: conda.rs  default.rs
src/version/test/: macros.rs  mod.rs
tests/data/: current_repodata.json
