[package]
name = "libronda"
version = "0.1.0"
authors = ["Anaconda, Inc. <conda@anaconda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
graphlib = "*"
version-compare = { path = "../version-compare" }

[dev-dependencies]
pretty_assertions = "*"