[package]
name = "libronda"
version = "0.1.0"
authors = ["Anaconda, Inc. <conda@anaconda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
graphlib = "*"
lazy_static = "1.4.0"
regex = "1.3.1"
rstest = "0.4.1"