[package]
name = "libronda"
version = "0.1.0"
authors = ["Anaconda, Inc. <conda@anaconda.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
graphlib = "0.5"
lazy_static = "1.4"
regex = "1.3"
rstest = "0.4"
paste = "0.1"